<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.example.bookabook.ui.userAuthentication.signUp.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/opacity"
        tools:context=".ui.userAuthentication.signUp.SignUpFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/registerTextView"
                    style="@style/TextMainHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:text="@string/Sign_up_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTextUserName"
                    style="@style/MyAppEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="20"
                    android:paddingStart="@dimen/editTextPadding"
                    android:paddingEnd="@dimen/editTextPadding"
                    app:counterMaxLength="20"
                    app:error="@{signUpViewModel.userNameError}"
                    app:helperText="ex: Ahmed Ali"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aaa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={signUpViewModel.addUserName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTextUseEmail"
                    style="@style/MyAppEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingStart="@dimen/editTextPadding"
                    android:paddingEnd="@dimen/editTextPadding"
                    app:error="@{signUpViewModel.userEmailError}"
                    app:helperText="ex: Ahmed@test.com"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextUserName"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextUserName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={signUpViewModel.addUserEmail}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTextUsePassword"
                    style="@style/MyAppEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingStart="@dimen/editTextPadding"
                    android:paddingEnd="@dimen/editTextPadding"
                    app:error="@{signUpViewModel.userPasswordError}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextUseEmail"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextUseEmail"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextUseEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={signUpViewModel.addUserPassword}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/SignUpRegisterButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small_normal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_small_normal"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:onClick="@{()->signUpViewModel.registerNow()}"
                    android:text="@string/register"
                    app:enableIfTrue="@{signUpViewModel.registerBtnEnable}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="@dimen/CardRadius4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextUsePassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:hideIfFalse="@{signUpViewModel.progressBarVisability}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>